# winuse

./: .gitignore  LICENSE  README.md  SKILL.md
client/: .gitignore  README.md  SKILL.md  pyproject.toml
client/references/: api.md
client/src/winuse_client/: __init__.py  cli.py
scripts/: integration_test.py  integration_test.sh  integration_test_cmd_window.sh
telegram-bot/: .env.example  bot.py  commands.py  config.py  docker-compose.yml  requirements.txt  winuse_api.py
windows/: README.md  build.py  config.yaml  requirements.txt  upload.sh
windows/scripts/: deploy.sh  run_server.ps1  test_remote.sh
windows/tests/: test_api.py
windows/winuse/: __main__.py  app.py  config.py  tray.py
windows/winuse/core/: __init__.py  keyboard.py  mouse.py  screenshot.py  windows.py
