[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "winuse-client"
version = "0.1.0"
description = "Python CLI client for WinUse - remote Windows desktop automation"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "WinUse", email = "winuse@example.com" },
]
keywords = ["windows", "automation", "remote-control", "cli", "winuse"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "requests>=2.28.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
winuse = "winuse_client.cli:main"

[project.urls]
Homepage = "https://github.com/winuse/winuse-client"
Repository = "https://github.com/winuse/winuse-client"
Issues = "https://github.com/winuse/winuse-client/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/winuse_client"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
